<resources>
    <string name="app_name">ChatApp</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="display_name">Display Name</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="open_chat">Open Chat</string>
    <string name="user_image">user_image</string>
    <string name="user_name">user_name</string>
    <string name="user_email">user_email</string>
    <string name="chats">Chats</string>
    <string name="users">Users</string>
    <string name="welcome_to_chat_app">Welcome to Chat App</string>
    <string name="toolbar_title_user_list">toolbar_title_user_list</string>
    <string name="button_one_to_one_chat">Message</string>
    <string name="button_group_chat">Group Chat</string>
</resources>