<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:title="Chat App"
        app:titleTextColor="@android:color/white"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/purple_500" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:textColorHint="@color/purple_500"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/display_name"
        android:inputType="text"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:textColorHint="@color/purple_500"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="12dp" />

    <TextView
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/purple_500"
        android:textSize="14sp" />

</LinearLayout>